Changed name of library

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Engine)
 set(CMAKE_CXX_STANDARD 17)
 
 set(SOURCE_FILES Engine.cpp Engine.h)
-add_library(EpsilonEngine ${SOURCE_FILES})
+add_library(Engine ${SOURCE_FILES})
